--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
   google_fonts: ^5.1.0
+  get: ^4.6.5
+  shortid: ^0.1.2
+  bottom_sheet: ^4.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
